login connection jwt

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGODB_URL='mongodb+srv://ritikraj2629:ritik123@cluster0.cjdu9v5.mongodb.net/?retryWrites=true&w=majority'
+JWT_SECRET_KEY ="supersecretkey2629"
